Add STOP! to various files

--- a/style.css
+++ b/style.css
@@ -11,4 +11,15 @@ Tags: black, blue, gray, red, white, yellow, dark, light, one-column, two-column
 Text Domain: lyquix
 */
 
-/* DO NOT ADD STYLES TO THIS FILE */
+/*
+    .d8888b. 88888888888 .d88888b.  8888888b.   888
+   d88P  Y88b    888    d88P" "Y88b 888   Y88b  888
+   Y88b.         888    888     888 888    888  888
+    "Y888b.      888    888     888 888   d88P  888
+       "Y88b.    888    888     888 8888888P"   888
+         "888    888    888     888 888         Y8P
+   Y88b  d88P    888    Y88b. .d88P 888          "
+    "Y8888P"     888     "Y88888P"  888         888
+
+  DO NOT MODIFY THIS FILE!
+*/
