--- a/css/lib/grid.scss
+++ b/css/lib/grid.scss
@@ -21,12 +21,12 @@
 @mixin grid-template {
 	// Column classes
 	@for $c from 1 through 10 {
-		.grid-cols-#{$c} {grid-template-columns: repeat(#{$c}, auto);}
+		.grid-cols-#{$c} {grid-template-columns: repeat(#{$c}, 1fr);}
 	}
 	// Screen-specific column classes
 	@each $s in $screen-sizes {
 		@for $c from 1 through 10 {
-			body[screen=#{$s}] .grid-cols-#{$c}-#{$s} {grid-template-columns: repeat(#{$c}, auto);}
+			body[screen=#{$s}] .grid-cols-#{$c}-#{$s} {grid-template-columns: repeat(#{$c}, 1fr);}
 		}
 	}
 }
